--- a/ota-plus-web/app/reactapp/style/ota-default/override-ant.scss
+++ b/ota-plus-web/app/reactapp/style/ota-default/override-ant.scss
@@ -13,6 +13,7 @@ h3 {
   &-menu {
     background-color: #1D232D;
     color: #9B9DA2;
+    display: inline-block;
     font-size: 1.125rem;
     font-weight: 300;
     padding-top: 4px;
